=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 2.006 - Under Development

=over

=item *

Fixed a bug in benchmarking system.  [Jesse Erlbaum]

=item *

Fixed a bug which could cause an upgrade to fail if the target Krang
has media files with single-quotes in their filenames. [Sam]

=back

=head2 2.005 - June 1st, 2006

=over

=item *

Made changes to Krang's Javascript to allow easier future integration
of Prototype Javascript library. [Michael Peters]

=item *

Fixed bug in Default::fancy_keywords; updates to fields would be lost
if a new element was added to the story. [Michael Peters]

=item *

Upgraded to HTML::Template::Expr v0.07, providing a better expression
syntax and some bug-fixes. [Michael Peters]

=item *

Fixed a bug which occurred when a story was reverted after a change in
category assignment. [Michael Peters]

=item *

Fixed KDS deserialization to work when categories point to stories and
media below in the category tree. [Michael Peters]

=item *

Fixed bug in Krang::CGI::Site::add_save_stay() where clicking "Delete"
right after "Save & Stay" wouldn't delete the newly created
site. [Bodo Schulze]

=item *

Added missing button GIF for Xinha's SuperClean plugin. [Bodo Schulze]

=item * 

Fixed krang_upgrade and krang_build to prevent overwriting existing
SSL certificates [Michael Peters]

=item *

Upgraded HTML::PopupTreeSelect to v1.5, fixing a bug affecting Firefox
and Camino on Mac OSX. [Sam]

=back

=head2 2.004

=over

=item *

Adapted t/publish.t to Michael Peters' SSL simplification patch. [Bodo
Schulze]

=item *

Fixed addon v2 compat bug in t/find.t. [Bodo Schulze]

=item *

Fixed Xinha link-munging so that you can now use the WYSIWYG editor
to create links and images.  Full-screen mode now works properly.
[Jesse Erlbaum]

=item *

In Krang::Publish I decoupled processing of assets from publish_story()
and preview_story() allowing for future subclassing into Krang::Publisher::Parallel