@@ -8,7 +8,15 @@ This document contains a list of changes for each release of Krang.
 
 =item *
 
+Added new index to element table.  This index will greatly speed 
+complex publishing logic.  Thanks to James Reidy for identifying
+the bottleneck.  [Jesse Erlbaum]
+
+
+=item *
+
 Fixed a bug in benchmarking system.  [Jesse Erlbaum]
+
 
 =item *
 
